--- a/Ansible/roles/gre/tasks/modity_config.yaml
+++ b/Ansible/roles/gre/tasks/modity_config.yaml
@@ -13,12 +13,12 @@
     path: /etc/sysctl.conf
     block: net.ipv4.ip_forward = 1
 
-- name: modity rc.local
-  blockinfile:
-    path: /etc/rc.local
-    block: |
-      tcset eth0 --rate {{ bandwidth }}mbps --direction outgoing
-      tcset eth0 --rate {{ bandwidth }}mbps --direction incoming
+#- name: modity rc.local
+#  blockinfile:
+#    path: /etc/rc.local
+#    block: |
+#      tcset eth0 --rate {{ bandwidth }}mbps --direction outgoing
+#      tcset eth0 --rate {{ bandwidth }}mbps --direction incoming
 
 - name: modity keepalived unicast_src_ip
   replace:
